# gstreamer-imx

./: .cproject  .gitignore  .project  ChangeLog  README.md  meson.build  meson_options.txt  todo.txt  wscript
docs/: blitter-architecture.md  debian-ubuntu.md  faq.md  zerocopy.md
ext/audio/: gstimxmp3encoder.c  gstimxmp3encoder.h  gstimxuniaudiocodec.c  gstimxuniaudiocodec.h  gstimxuniaudiodecoder.c  gstimxuniaudiodecoder.h  meson.build  plugin.c  wscript
ext/imx2d/: gstimx2dcompositor.c  gstimx2dcompositor.h  gstimx2dmisc.c  gstimx2dmisc.h  gstimx2dvideobufferpool.c  gstimx2dvideobufferpool.h  gstimx2dvideooverlayhandler.c  gstimx2dvideooverlayhandler.h  gstimx2dvideosink.c  gstimx2dvideosink.h  gstimx2dvideotransform.c  gstimx2dvideotransform.h  gstimxg2dcompositor.c  gstimxg2dcompositor.h  gstimxg2dvideosink.c  gstimxg2dvideosink.h  gstimxg2dvideotransform.c  gstimxg2dvideotransform.h  gstimxipuvideosink.c  gstimxipuvideosink.h  gstimxipuvideotransform.c  gstimxipuvideotransform.h  gstimxpxpvideosink.c  gstimxpxpvideosink.h  gstimxpxpvideotransform.c  gstimxpxpvideotransform.h  meson.build  plugin.c
ext/vpu/: gstimxvpucommon.c  gstimxvpucommon.h  gstimxvpudec.c  gstimxvpudec.h  gstimxvpudecbufferpool.c  gstimxvpudecbufferpool.h  gstimxvpudeccontext.c  gstimxvpudeccontext.h  gstimxvpuenc.c  gstimxvpuenc.h  gstimxvpuench263.c  gstimxvpuench263.h  gstimxvpuench264.c  gstimxvpuench264.h  gstimxvpuencjpeg.c  gstimxvpuencjpeg.h  gstimxvpuencmpeg4.c  gstimxvpuencmpeg4.h  gstimxvpuencvp8.c  gstimxvpuencvp8.h  meson.build  plugin.c  wscript
gst-libs/gst/imx/common/: gstimxcommon.pc.in  gstimxdefaultallocator.c  gstimxdefaultallocator.h  gstimxdmabufallocator.c  gstimxdmabufallocator.h  gstimxdmabufferallocator.c  gstimxdmabufferallocator.h  gstimxdmabufferuploader.c  gstimxdmabufferuploader.h  gstimxdmaheapallocator.c  gstimxdmaheapallocator.h  gstimxionallocator.c  gstimxionallocator.h  meson.build
gst-libs/gst/imx/video/: gstimxvideobufferpool.c  gstimxvideobufferpool.h  gstimxvideodmabufferpool.c  gstimxvideodmabufferpool.h  gstimxvideouploader.c  gstimxvideouploader.h  gstimxvideoutils.c  gstimxvideoutils.h  meson.build
gst-libs/imx2d/: imx2d.c  imx2d.h  imx2d_priv.h  linux_framebuffer.c  linux_framebuffer.h  meson.build
gst-libs/imx2d/backend/g2d/: g2d_blitter.c  g2d_blitter.h  meson.build
gst-libs/imx2d/backend/ipu/: ipu_blitter.c  ipu_blitter.h  meson.build
gst-libs/imx2d/backend/pxp/: meson.build  pxp_blitter.c  pxp_blitter.h
src/audio/: mp3_encoder.c  mp3_encoder.h  plugin.c  uniaudio_codec.c  uniaudio_codec.h  uniaudio_decoder.c  uniaudio_decoder.h  wscript
src/blitter/: blitter.c  blitter.h  compositor.c  compositor.h  video_sink.c  video_sink.h  video_transform.c  video_transform.h  wscript
src/common/: alloc.c  alloc.h  base_blitter.c  base_blitter.h  blitter_video_sink.c  blitter_video_sink.h  blitter_video_transform.c  blitter_video_transform.h  canvas.c  canvas.h  fd_object.c  fd_object.h  gst_fslmeta.c  gst_fslmeta.h  gstimxcommon.pc.in  phys_mem_addr.h  phys_mem_allocator.c  phys_mem_allocator.h  phys_mem_buffer_pool.c  phys_mem_buffer_pool.h  phys_mem_meta.c  phys_mem_meta.h  region.c  region.h  vpu_bufferpool.c  vpu_bufferpool.h  vpu_framebuffers.c  vpu_framebuffers.h  vpu_utils.c  vpu_utils.h  wscript
src/compositor/: compositor.c  compositor.h  wscript
src/decoder/: vpu_decoder.c  vpu_decoder.h  vpu_decplugin.c  wscript
src/eglgles-viv/: gsteglglessink.c  video_platform_wrapper.c  wscript
src/eglvivsink/: egl_misc.c  egl_misc.h  egl_platform.h  egl_platform_android.c  egl_platform_fb.c  egl_platform_wayland.c  egl_platform_x11.c  eglvivsink.c  eglvivsink.h  gl_headers.c  gl_headers.h  gles2_renderer.c  gles2_renderer.h  gstdataqueue.c  gsteglvivsink.c  gsteglvivsink.h  gstqueuearray.c  plugin.c  video_platform_wrapper.h  wscript
src/eglvivsink2/: egl_platform.h  egl_platform_x11.c  eglvivsink.c  gl_headers.h  gles2_renderer.c
src/g2d/: allocator.c  allocator.h  blitter.c  blitter.h  compositor.c  compositor.h  plugin.c  sink.c  sink.h  video_sink.c  video_sink.h  video_transform.c  video_transform.h  videotransform.c  videotransform.h  wscript
src/g2dpango/: basetextoverlay.c  textoverlay.h  timeoverlay.c  wscript
src/ipu/: allocator.c  allocator.h  blitter.c  blitter.h  buffer_pool.c  buffer_pool.h  compositor.c  compositor.h  device.c  device.h  plugin.c  sink.c  sink.h  video_sink.c  video_sink.h  video_transform.c  video_transform.h  videotransform.c  videotransform.h  wscript
src/ipusink/: ipu_sink.c  ipu_sink.h  wscript
src/pxp/: allocator.c  allocator.h  blitter.c  blitter.h  device.c  device.h  plugin.c  sink.c  sink.h  video_sink.c  video_sink.h  video_transform.c  video_transform.h  videotransform.c  videotransform.h  wscript
src/v4l2src/: v4l2_buffer_pool.c  v4l2_buffer_pool.h  v4l2sink.h  v4l2src.c  v4l2src.h  wscript
src/v4l2video/: plugin.c  v4l2_buffer_pool.c  v4l2_buffer_pool.h  v4l2sink.c  v4l2src.c  v4l2src.h  wscript
src/vpu/: allocator.c  allocator.h  buffer_pool.c  buffer_pool.h  decoder.c  decoder.h  decoder_context.c  decoder_context.h  decoder_framebuffer_pool.c  decoder_framebuffer_pool.h  device.c  device.h  encoder_base.c  encoder_base.h  encoder_h263.c  encoder_h263.h  encoder_h264.c  encoder_h264.h  encoder_mjpeg.c  encoder_mjpeg.h  encoder_mpeg4.c  encoder_mpeg4.h  fb_buffer_pool.c  fb_buffer_pool.h  framebuffer_array.c  framebuffer_array.h  framebuffers.c  framebuffers.h  mem_blocks.c  mem_blocks.h  plugin.c  utils.c  utils.h  vpu_buffer_meta.c  vpu_buffer_meta.h  vpu_framebuffer_meta.c  wscript  (+1 more)
sys/v4l2video/: gstimxv4l2amphiondec.c  gstimxv4l2amphiondec.h  gstimxv4l2amphionmisc.c  gstimxv4l2amphionmisc.h  gstimxv4l2context.c  gstimxv4l2context.h  gstimxv4l2isivideotransform.c  gstimxv4l2isivideotransform.h  gstimxv4l2object.c  gstimxv4l2object.h  gstimxv4l2prelude.h  gstimxv4l2videoformat.c  gstimxv4l2videoformat.h  gstimxv4l2videosink.c  gstimxv4l2videosink.h  gstimxv4l2videosrc.c  gstimxv4l2videosrc.h  gstimxv4l2videotransform.c  gstimxv4l2videotransform.h  meson.build  plugin.c
(+56 files in other folders)
