option('vpu', type : 'feature', value : 'auto')

option('uniaudiodec', type : 'feature', value : 'auto')
option('mp3encoder', type : 'feature', value : 'auto')

option('g2d', type : 'feature', value : 'auto')

option('imx2d-videosink', type : 'boolean', value : true)
option('imx2d-compositor', type : 'feature', value : 'auto')

option('package-name', type : 'string', value : 'Unknown package name', yield : true, description : 'package name to use in plugins')
option('package-origin', type : 'string', value : 'Unknown package origin', yield : true, description : 'package origin URL to use in plugins')
