option('vpu', type : 'feature', value : 'auto', description : 'hardware accelerated video en/decoding elements using the NXP i.MX VPU')

option('uniaudiodec', type : 'feature', value : 'auto', description : 'Audio decoder element using the NXP uniaudio codecs')
option('mp3encoder', type : 'feature', value : 'auto', description : 'mp3 encoder element using the NXP mp3 encoder library')

option('g2d', type : 'feature', value : 'auto', description : '2D elements using the Vivante G2D API')
option('g2d-based-on-dpu', type : 'boolean', value : false, description : 'Whether or not the G2D implementation is emulated on top of the i.MX8qm or i.MX8qxp DPU')

option('ipu', type : 'feature', value : 'auto', description : '2D elements using the i.MX6 Image Processing Unit (IPU)')

option('imx-headers-path', type : 'string', value : '', description : 'path to the extra imx kernel headers')

option('imx2d-videosink', type : 'boolean', value : true)
option('imx2d-compositor', type : 'feature', value : 'auto')

option('v4l2', type : 'boolean', value : true, description : 'build mxc_v4l2 specific V4L2 source and sink elements')

option('package-name', type : 'string', value : 'Unknown package name', yield : true, description : 'package name to use in plugins')
option('package-origin', type : 'string', value : 'Unknown package origin', yield : true, description : 'package origin URL to use in plugins')
